plugins {
    id "io.papermc.paperweight.userdev" version "2.0.0-beta.14"
    id 'java'
    id "io.github.goooler.shadow" version "8.1.8"
}

group = 'de.mcterranova.proficisci'
version = '1.0.0'

repositories {
    mavenCentral()
    maven {
        name = "papermc-repo"
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }
    maven {
        name = "sonatype"
        url = "https://oss.sonatype.org/content/groups/public/"
    }
    maven {
        name = 'enginehub-repo'
        url = 'https://maven.enginehub.org/repo/'
    }
    maven {
        name = "Nexo"
        url = "https://repo.nexomc.com/releases"
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Pl3xMap"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter { includeGroup "maven.modrinth" }
    }
}

dependencies {
    paperweightDevelopmentBundle("io.papermc.paper:dev-bundle:1.21.1-R0.1-SNAPSHOT")
    implementation('com.zaxxer:HikariCP:5.0.1')
    compileOnly('com.sk89q.worldguard:worldguard-bukkit:7.0.13')
    implementation 'org.ow2.asm:asm:9.4'
    compileOnly 'com.nexomc:nexo:1.1.0'
    compileOnly("maven.modrinth:pl3xmap:1.21.4-522")
    compileOnly 'de.mcterranova:terranova-lib:1.0.0'
    compileOnly 'de.terranova:nations:1.0.0-SNAPSHOT'
    compileOnly fileTree(dir: 'jars', include: ['*.jar'])
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

processResources {
    def props = [version: version]
    inputs.properties(props)
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand(props)
    }
}

shadowJar {
    destinationDirectory.set(file("../Nations/testserver/plugins"))
    archiveClassifier.set('all')
}

tasks.build {
    dependsOn tasks.shadowJar
}
